Fix shop issues with category filtering
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>